--- a/learning_js/index.html
+++ b/learning_js/index.html
@@ -10,20 +10,11 @@
   <body>
   <h1>Изучение JS!</h1>
 
-  <div class="box" id="box"></div>
-  <button>1</button>
-  <button>2</button>
-  <button>3</button>
-  <button>4</button>
-  <button>5</button>
-  <div class="circle"></div>
-  <div class="circle"></div>
-  <div class="circle"></div>
+  <button class="btn">Animation</button>
   <div class="wrapper">
-    <div class="heart">1</div>
-    <div class="heart">2</div>
-    <div class="heart">3</div>
+    <div class="box"></div>
   </div>
-    <script src="./js/script.js"></script>
+  
+  <script src="./js/script.js"></script>
   </body>
 </html>
